--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "htmlmin/htmlmin": "^6.0"
+        "htmlmin/htmlmin": "^6.0",
+        "thetispro/laravel5-setting": "1.0.x-dev"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
